--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 </div>
 
 </section>
-<div class="parallax"></div>
+<div class="parallax">
+
+</div>
 <section class="content" style="margin-top:80px;">
 
     <div class="card">
