--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </section>
 <div class="parallax">
-
+<img src="image/kevin-laminto-osKdw8ih23U-unsplash.jpg">
 </div>
 <section class="content" style="margin-top:80px;">
 
